--- a/src/css/themes/_theme-honeycrisp.scss
+++ b/src/css/themes/_theme-honeycrisp.scss
@@ -150,6 +150,12 @@ body:has(input[value="theme--honeycrisp"]:checked), // Just for the theme switch
     inset -2px -2px rgba(0,0,0,0.25);
   }
 
+  section[class*="--alt"] {
+    &.tmpl-content-aside {
+      --aside-color: #000;
+    }
+  }
+
   section[class*="--dark"] {
     .h1,
     .h2,
